# semos-agentura

./: .gitignore  LICENSE  README.md  pyproject.toml  run_local.py
.github/workflows/: test.yml
agentura-commons/: pyproject.toml
agentura-commons/src/agentura_commons/: __init__.py  a2a_client.py  a2a_server.py  base.py  client.py  file_middleware.py  llm_executor.py  llm_router.py  mcp_client.py  mcp_server.py  settings.py  testing.py  transport.py
agentura-commons/tests/: conftest.py  test_a2a.py  test_a2a_integration.py  test_client_integration.py  test_e2e_diagram_email.py  test_file_middleware.py  test_format_for_llm.py  test_llm_executor.py  test_normalize.py
agentura-ui/: .env.example  config.yml  pyproject.toml
agentura-ui/src/agentura_ui/: __init__.py  __main__.py  a2a_client.py  a2a_tools.py  file_manager.py  file_registry.py  mcp_hub.py  mcp_tools.py  renderers.py
agentura-ui/tests/: conftest.py  test_app.py  test_e2e.py  test_file_registry.py  test_mcp_hub.py  test_mcp_tools.py  test_ui.py
docs/: file-handling-spec.md
document-agent/: .env.example  .gitignore  README.md  pyproject.toml
document-agent/src/document_agent/: __init__.py  _constants.py  _llm_client.py  _utils.py  cli.py  config.py  exceptions.py  models.py  service.py
document-agent/src/document_agent/composition/: __init__.py  _diagram_optimize.py  _diagram_source.py  _documents.py  _drawio.py  _generate_diagram.py  _markdown_prep.py  _mermaid.py  _reference_doc.py  _slides.py  compose.py
document-agent/src/document_agent/digestion/: __init__.py  _docx_digest.py  _images.py  _ocr_models.py  _office.py  _pdf.py  _providers.py  _schema.py  _styles.py  digest.py
document-agent/src/document_agent/forms/: __init__.py  _docx_forms.py  _pdf_forms.py  fill.py
document-agent/tests/: conftest.py  test_compose_refdoc.py  test_config.py  test_constants.py  test_diagram_images.py  test_diagram_optimize.py  test_diagram_source.py  test_docx_digest.py  test_docx_forms_internal.py  test_drawio.py  test_forms.py  test_images.py  test_integration.py  test_markdown_prep.py  test_mcp.py  test_mermaid.py  test_models.py  test_ocr_models.py  test_pdf.py  test_pdf_forms_internal.py  test_slides.py  test_styles.py  test_utils.py
document-agent/tools/: package-lock.json  package.json
email-agent/: .env.example  .gitignore  README.md  pyproject.toml  run.py
email-agent/src/email_agent/: __init__.py  archive.py  auth.py  backend.py  client.py  com_client.py  config.py  exceptions.py  formatting.py  imap_client.py  mailgent.py  models.py  service.py  smtp_client.py  tools.py
email-agent/tests/: test_backend.py  test_integration.py  test_mcp.py
