[project]
name = "semos-agentura"
version = "0.1.0"
description = "Semos Agentura - Multi-agent system with MCP + A2A"
requires-python = ">=3.13"

[tool.uv.workspace]
members = [
    "agentura-commons",
    "email-agent",
    "document-agent",
    "agentura-ui",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
markers = [
    "integration: requires external deps (COM, IMAP, pandoc, LLM API) - run with -m integration",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
    "E402",   # module import not at top (load_dotenv before imports)
    "E501",   # line too long (handled by formatter)
    "UP042",  # str+Enum -> StrEnum (keep compat with older Python if needed)
]

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401"]
