[project]
name = "document-agent"
version = "0.1.0"
description = "Document digestion (OCR to Markdown) and composition (Markdown to documents) agent"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agentura-commons",
    "httpx>=0.28",
    "mistralai>=1.12",
    "pypdf[crypto]>=5.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.13",
    "python-dotenv>=1.2",
    "lxml>=5.0",
]

[tool.uv.sources]
agentura-commons = { workspace = true }

[project.scripts]
document-agent = "document_agent.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/document_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: requires external tools (pandoc/marp/mmdc/libreoffice) - run with -m integration",
]
addopts = "-m 'not integration'"
